Amomical update creation (race condition), readme.md update, swag update
